--- a/index.html
+++ b/index.html
@@ -82,13 +82,16 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-      <a class="navbar-brand" href="#">Ace iPhones</a>
+      <a class="navbar-brand" href="#">
+        <img src="/Users/deezy/Desktop/untitled folder 3/images/IMG_3003.jpeg" alt="Ace iPhones" height="30">
+        
+      </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="#hero">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="#hero">Ace iPhones</a></li>
           <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
           <li class="nav-item"><a class="nav-link" href="#why-choose-us">Why Choose Us</a></li>
           <li class="nav-item"><a class="nav-link" href="#testimonials">Testimonials</a></li>
@@ -103,7 +106,7 @@
     <div class="container">
       <h1>Professional Repair Services</h1>
       <p>Fast and reliable repairs for your devices.</p>
-      <a href="#contact" class="btn btn-primary">Get an Instant Quote</a>
+      <a href="#contact" class="btn btn-primary">Book an appointment!</a>
     </div>
   </section>
 
@@ -239,16 +242,16 @@
   <script>
     document.addEventListener('DOMContentLoaded', function() {
       const testimonials = [
-        { text: "Great service and very professional. My phone is working like new again!", author: "Jane Doe" },
-        { text: "Fast, efficient, and affordable repair. Highly recommend their services.", author: "John Smith" },
-        { text: "They fixed my tablet when no one else could. Absolutely fantastic service!", author: "Michael Johnson" },
-        { text: "Very knowledgeable staff and reasonable prices. Will definitely return!", author: "Sarah Williams" },
-        { text: "The repair was completed much faster than I expected. Great job!", author: "Robert Brown" },
-        { text: "Excellent customer service. They explained everything clearly before starting the repair.", author: "Emily Davis" },
-        { text: "My old phone works better than when it was new. These guys are magicians!", author: "David Wilson" },
-        { text: "Honest pricing and quality work. No surprises or hidden fees.", author: "Lisa Taylor" },
-        { text: "They saved all my data after my phone crashed. Forever grateful!", author: "Thomas Anderson" },
-        { text: "Been to 3 other repair shops before finding this one. Should have come here first!", author: "Jennifer Martinez" }
+        { text: "Boy Stay with the gadgets! 🔥 🔥 🔥", author: "@just_el___" },
+        { text: "The cracked screen God 📲", author: "@Kee_dude525" },
+        { text: "My boy make it look too easy now 😂💪🏾", author: "@Michael 1updevo" },
+        { text: "The best in the city!", author: "@b_coldhearted" },
+        { text: "The blue back iphone cover is smooth!", author: "@Oselito1" },
+        { text: "Are you open right now????", author: "@most_loved_emily" },
+        { text: "So much respect to bro for teaching the kids how to fix iphone screens 🔥 🔥", author: "@deen_oolen" },
+        { text: "Quickest repair in the city, 5 mins tops", author: "@lisagurl___" },
+        { text: "They saved all my data after my phone crashed. Forever grateful!", author: "Thomas_gr8" },
+        { text: "Been to 3 other repair shops before finding this one. Should have come here first! 🙌🏾", author: "@barbie_brandyyy" }
       ];
       
       const container = document.querySelector('.testimonial-container');
